<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Customer Manager</string>
    <string name="activate_license">Activate License</string>
    <string name="enter_license_key">Enter License Key</string>
    <string name="add_customer">Add Customer</string>
    <string name="orders">Orders</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="bill_number">Bill Number</string>
    <string name="message">Message</string>
    <string name="send_whatsapp">Send WhatsApp</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="message_history">Message History</string>
</resources>
